# twag-poc

./: .gitignore  CHANGELIST.md  CMakeLists.txt  GEMINI.md  README.md  build.sh  test.sh  test_mno.sh
freeDiameter/include/freeDiameter/: CMakeLists.txt
src/: config_manager.cpp  config_manager.hpp  data_plane.cpp  data_plane.hpp  dhcp_server.cpp  dhcp_server.hpp  event_loop.cpp  event_loop.hpp  main.cpp  radius_server.cpp  radius_server.hpp  s2a_interface.cpp  s2a_interface.hpp  session_manager.cpp  session_manager.hpp  sta_interface.cpp  sta_interface.hpp  twag_core.cpp  twag_core.hpp  ue_session.hpp
tests/: test_s2a_payload.cpp  test_session_manager.cpp
tests/e2e/: mock_dns.py  mock_pgw.py  test_client.py
